--- a/apache_spark/thesis/alternativen.tex
+++ b/apache_spark/thesis/alternativen.tex
@@ -37,7 +37,7 @@ Storm ist das Framework der Wahl, wenn Wert auf sehr kurze Latenzzeiten gelegt w
 BluBlaBlubb
 
 
-\section{Alternative zu MLLibs: Dato GraphLab Create}
+\section{Alternative zu MLLibs: Dato GraphLab Create\textsuperscript{TM}}
 \label{section:h20}
 
 
