--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,17 +1,49 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-30 23:37:22 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-01 23:15:52 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@misc{cite-key,
+@misc{lr12,
+	Author = {B. Baltes-G{\"o}tz},
+	Date-Added = {2015-02-01 22:13:54 +0000},
+	Date-Modified = {2015-02-01 22:15:50 +0000},
+	Month = {06},
+	Title = {Logistische Regressionsanalyse mit SPSS, Universit{\"a}t Trier, ZIMK URL: \url {http://www.uni-trier.de/fileadmin/urt/doku/logist/logist.pdf}},
+	Year = {2012}}
+
+@misc{lr14,
+	Author = {Dr. Dirk Enzmann},
+	Date-Added = {2015-02-01 20:45:36 +0000},
+	Date-Modified = {2015-02-01 20:47:27 +0000},
+	Month = {11},
+	Title = {Lineare Regression, Universit{\"a}t Hamburg, Juristische Fakult{\"a}t URL: \url {http://www2.jura.uni-hamburg.de/instkrim/kriminologie/Mitarbeiter/Enzmann/Lehre/StatIKrim/Regression.pdf}},
+	Year = {2014}}
+
+@misc{ri13,
+	Author = {David M. Lane, David Scott, et al.},
+	Date-Added = {2015-02-01 20:16:03 +0000},
+	Date-Modified = {2015-02-01 20:22:37 +0000},
+	Month = {11},
+	Title = {Introduction to Statistics, Rice University, University of Houston URL: \url {http://onlinestatbook.com/2/index.html}},
+	Year = {2013}}
+
+@misc{tud06,
+	Author = {Dr. J. F{\"u}rnkranz, Dr. G. Grieser},
+	Date-Added = {2015-02-01 17:13:59 +0000},
+	Date-Modified = {2015-02-01 17:33:51 +0000},
+	Publisher = {Technische Universit{\"a}t Darmstadt},
+	Title = {Maschinelles Lernen: Symbolische Ans{\"a}tze URL: \url {http://www.ke.tu-darmstadt.de/lehre/archiv/ws0607/mldm/}},
+	Year = {2006}}
+
+@misc{tml14,
 	Author = {Jason Brownlee},
 	Date-Added = {2015-01-30 22:35:50 +0000},
-	Date-Modified = {2015-01-30 22:37:22 +0000},
+	Date-Modified = {2015-01-30 22:37:38 +0000},
 	Month = {11},
 	Title = {A Tour of Machine Learning Algorithms URL: \url {http://machinelearningmastery.com/a-tour-of-machine-learning-algorithms/}},
 	Year = {2013}}
