--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-31 00:08:29 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-01 01:14:54 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{ml15,
+	Author = {Tom M. Mitchell},
+	Date-Added = {2015-02-01 00:12:17 +0000},
+	Date-Modified = {2015-02-01 00:14:18 +0000},
+	Edition = {Draft of January 31, 2015},
+	Publisher = {McGraw Hill},
+	Title = {Machine Learning},
+	Year = {2015}}
 
 @book{rml90,
 	Author = {Jude W. Shavlik, Thomas G. Dietterich},
