--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-03 14:44:46 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-04 14:46:51 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{mrec14,
+	Author = {Databricks},
+	Date-Added = {2015-02-04 13:44:06 +0000},
+	Date-Modified = {2015-02-04 13:46:48 +0000},
+	Month = {11},
+	Title = {Movie Recommendation with MLLib, Databricks URL: \url {https://databricks-training.s3.amazonaws.com/movie-recommendation-with-mllib.html}},
+	Year = {2014}}
 
 @misc{rf06,
 	Author = {Leo Breiman, Adele Cutler},
