--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-03 15:46:47 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-04 14:42:49 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{als09,
+	Author = {Yunhong Zhou, Dennis Wilkinson, et al. },
+	Date-Added = {2015-02-03 15:51:53 +0000},
+	Date-Modified = {2015-02-04 13:42:46 +0000},
+	Publisher = {HP Labs, Palo Alto},
+	Title = {Large-scale Parallel Collaborative Filtering for the Netflix Prize},
+	Year = {2009}}
 
 @book{als14,
 	Author = {Trevor Hastie, Rahul Mazumder, et al.},
