--- a/apache_spark/thesis/einfuehrung.tex
+++ b/apache_spark/thesis/einfuehrung.tex
@@ -28,9 +28,20 @@ Wie lässt sich der Begriff \textit{Big Data} abgrenzen? Es existiert keine absc
 
 Neben der reinen Menge spielt also offensichtlich auch die mangelnde oder fehlende Strukturierung und unter Umständen die Flüchtigkeit der Daten eine nicht unerhebliche Rolle. Dies können beispielsweise Daten aus Social-Media-Quellen sein, die aus allen möglichen verschiedenen Einzeldaten bestehen, Daten von Sensoren, die permanent überwacht werden müssen, oder Datenströme (Video, Audio, Bilder, Text), die nach einheitlichen Kriterien gefiltert werden sollen, um hier nur einige Beispiele zu nennen. Auch die temporäre Komponente ist ein Einsatzgebiet für \textit{Big Data}, und auch hier ist wieder das Beispiel der Datenströme heranzuziehen. 
 
-Bei der Definition von \textit{Big Data} werden laut des BITKOM-Ratgebers zum Thema \textit{Big Data} \citeint{bk14} auch immer wieder die „Three Vs“ angeführt. Dies sind \textit{Volume}, also die Datenmenge, \textit{Variety}, die Datenvielfalt und \textit{Velocity}, die Geschwindigkeit der Auswertung. 
+\begin{figure}[htb!]
+\centering
+\includegraphics[width=1.0\textwidth]{bilder/the_four_v.eps}
+\caption{Darstellung der vier Säulen von Big Data: The Four V's of Big Data}
+\label{fig:fourv}
+\end{figure}    
+
+Bei der Definition von \textit{Big Data} werden laut \citeint{fv13} auch immer wieder die „Four V's“\footnote{The four V's: Es exisiteren verschiedene Versionen der Säulen von Big Data. Deshalb war lange von nur drei Säulen die Rede (ohne Veracity), aber es existieren auch Definitionen von bis zu sieben V's (zusätzlich Variability, Visualisation, Value - Vergleich \citeint{sevv14}). Mittlerweile hat sich die Darstellung der Four V's jedoch etabliert.} angeführt. Dies sind \textit{Volume}, also die Datenmenge, \textit{Variety}, die Datenvielfalt,  \textit{Velocity}, die Geschwindigkeit der Auswertung, sowie \textit{Veracity}, die häufig stark schwankende Datenqualität. In Abbildung \ref{fig:fourv} wird dieser Zusammenhang dargestellt. 
+
+
 
 Die sinnvolle Analyse dieser Daten kann Unternehmen oder anderen Organisationen wichtige Informationen z.B. über Marktentwicklungen, bestimmte Kundenbedürfnisse, Epedemie-Ausbreitungen oder andere wichtige Sachverhalte liefern. Diese Analyse inklusive der dazu verwendeten Werkzeuge wird allgemein \textit{Big Data Analytics} genannt. 
+
+
 
 \section{Ansätze für Big Data Analytics}
 \label{section:ansaetze für Big Data Analytics}
