--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-04 14:46:51 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-04 19:25:08 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{sevv14,
+	Author = {Eileen McNutty},
+	Date-Added = {2015-02-04 18:19:51 +0000},
+	Date-Modified = {2015-02-04 18:24:44 +0000},
+	Month = {05},
+	Title = {Understanding Big Data: The Seven V's, Dataconomy URL: \url {http://dataconomy.com/seven-vs-big-data/}},
+	Year = {2014}}
+
+@misc{fv13,
+	Author = {Jason Tee},
+	Date-Added = {2015-02-04 18:11:12 +0000},
+	Date-Modified = {2015-02-04 18:13:13 +0000},
+	Month = {08},
+	Title = {Handling the four 'V's of big data: volume, velocity, variety, and veracity, The ServerSide URL: \url {http://www.theserverside.com/feature/Handling-the-four-Vs-of-big-data-volume-velocity-variety-and-veracity}},
+	Year = {2013}}
 
 @misc{mrec14,
 	Author = {Databricks},
